syntax = "proto3";

package plot;

option go_package = "ltplotter/pb";

service PlotService { rpc GeneratePlot(PlotRequest) returns (PlotResponse); }

message PlotRequest {
  repeated float x = 1;
  repeated YData y = 2;
  Metadata metadata = 3;
}

message YData { repeated float values = 1; }

message Metadata {
  string title = 1;
  Labels labels = 2;
  repeated string legends = 3;
}

message Labels {
  string x = 1;
  string y = 2;
}

message PlotResponse { bytes pdf = 1; }
