syntax = "proto3";

package plot;

option go_package = "ltplotter/expressionsvc/pb";

service ExpressionPlotService {
  rpc GeneratePlot(ExprPlotRequest) returns (ExprPlotResponse);
}

message PlotExpression {
  string expression = 1;
  string domain = 2;
  int32 samples = 3;
  string color = 4;
  string line_style = 5;
  string line_width = 6;
  string legend = 7;
}

message ExprPlotRequest {
  string x_label = 1;
  string y_label = 2;
  string x_min = 3;
  string x_max = 4;
  string y_min = 5;
  string y_max = 6;
  bool grid = 7;
  repeated PlotExpression plots = 8;
}

message ExprPlotResponse {
  string latex_src_code = 1;
  bytes pdf_plot = 2;
}
